# connext_starter_kit

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  DDS_PROCESS_BUILDER.md  README.md  RTI_RAPID_PROTOTYPING.md  run_rti_view.sh
.github/: copilot-instructions.md
.github/prompts/: build_cxx.prompt.md  clear_logs.prompt.md  framework_selector.prompt.md  rti_dev.prompt.md  wrapper_classes.prompt.md
apps/cxx11/: README.md
apps/cxx11/burst_large_data_app/: CMakeLists.txt  README.md  application.hpp  burst_publisher.cxx  burst_subscriber.cxx  run_publisher.sh  run_subscriber.sh
apps/cxx11/command_control/: CMakeLists.txt  README.md  application.hpp  command_control.cxx
apps/cxx11/command_override/: CMakeLists.txt  README.md  application.hpp  command_override.cxx  run.sh
apps/cxx11/dynamic_partition_qos/: CMakeLists.txt  README.md  application.hpp  dynamic_partition_qos.cxx  run.sh
apps/cxx11/example_foxglove/: CMakeLists.txt  example_foxglove.cxx  run.sh
apps/cxx11/example_io_app/: CMakeLists.txt  README.md  application.hpp  example_io_app.cxx  run.sh
apps/cxx11/example_io_foxglove/: example_foxglove.cxx
apps/cxx11/fixed_image_flat_zc/: CMakeLists.txt  README.md  application.hpp  fixed_image_flat_zc.cxx  run.sh
apps/cxx11/flat_image_app/: CMakeLists.txt  README.md  application.hpp  flat_image_app.cxx
apps/cxx11/foxglove_geojson/: CMakeLists.txt  README.md  foxglove_geojson.cxx  run.sh
apps/cxx11/foxglove_gstreamvideo_app/: CMakeLists.txt  README.md  application.hpp  foxglove_gstreamvideo_app.cxx  run.sh
apps/cxx11/foxglove_large_data/: CMakeLists.txt
apps/cxx11/foxglove_pointcloud/: CMakeLists.txt  README.md  foxglove_pointcloud.cxx  run.sh
apps/cxx11/foxglove_rawimage/: CMakeLists.txt  README.md  (+2 more)
apps/cxx11/parameter_app/: CMakeLists.txt  README.md  application.hpp  install.sh  parameter_app.cxx  params.yaml  run.sh
apps/dist_logger_tst/: README.md  api_output.txt  inspect_api.py  publisher.py  run_order_tests.sh  subscriber.py
apps/python/: Makefile  README.md  build_hooks.py  install.sh  pyproject.toml  requirements.txt  setup.py
apps/python/config_publisher/: config_publisher.py  run.sh
apps/python/downsampled_reader/: README.md  downsampled_reader.py  run.sh
apps/python/example_io_app/: README.md  example_io_app.py  requirements.txt  run.sh
apps/python/large_data_app/: README.md  large_data_app.py  run.sh
dds/: BUILD.md  CMakeLists.txt  README.md
dds/cxx11/: CMakeLists.txt  README.md
dds/cxx11/src/utils/: DDSContext.hpp  DDSContextSetup.hpp  DDSInterface.hpp  DDSReaderSetup.hpp  DDSWriterSetup.hpp
dds/datamodel/: DDSDefs.idl  ExampleTypes.idl
dds/datamodel/idl/: CompressedVideo.idl  Definitions.idl  ExampleTypes.idl  FrameTransform.idl  FrameTransforms.idl  GeoJSON.idl  NumericType.idl  PackedElementField.idl  PointCloud.idl  Pose.idl  RawImage.idl  Time.idl
dds/datamodel/python_gen/: Definitions.py  ExampleTypes.py
dds/presets/: record_all.json  record_json.json  record_selected.json
dds/python/: CMakeLists.txt
dds/qos/: DDS_QOS_PROFILES.xml  recording_service.xml  replay_service.xml  replay_service_config.xml
dds/utils/cxx11/: DDSClientParameterSetup.hpp  DDSContextSetup.hpp  DDSParameterSetup.hpp  DDSParameterUtils.hpp  DDSParticipantSetup.hpp  DDSReaderSetup.hpp  DDSServerParameterSetup.hpp  DDSWriterSetup.hpp  PARAMETER_DESIGN.md
docs/: 01_rules.md  02_phase_0_project_init.md  03_phase_1_system_design.md  04_phase_2_system_impl.md  05_phase_3_process_design.md  06_phase_4_process_impl.md  07_patterns_reference.md  08_decision_points.md  09_repository_structure.md  10_iterative_workflow.md  11_sub_prompts.md  12_orchestrator_prompt.md  13_implementation_roadmap.md  14_use_case_dry_run.md  15_recording_service_variable_launch_workflow.md
planning/: IMPLEMENTATION_PLAN.md  project.yaml.example  system_config.yaml.example
planning/processes/: command_controller.yaml.example  gps_tracker.yaml.example
resources/utilities/: optimize_socket_buffers.sh
scripts/: python_env.sh  xml_app_creation.sh
services/: README.md  converter_service_config.xml  recording_service_config.xml  recording_service_config_external_types.xml  replay_service_config.xml  start_convert.sh  start_record.sh  start_record_external_types.sh  start_replay.sh
services/python_control/: README.md  ServiceAdmin_QOS_PROFILES.xml  recording_service_control.py  setup.sh
services/recording_service_gui/: .gitignore  CONNEXT_MONITOR_REVIEW_FINDINGS.md  GUI_ARCHITECTURE.md  MONITORING_TYPE_ISSUE.md  README.md  REVIEW_FINDINGS.md  REVIEW_FIXES_APPLIED.md  recording_service_control.py  recording_service_environment.py  recording_service_gui.py  recording_service_monitor.py  run.sh  run_gui.sh  setup.sh
services/rs_gui/: .gitignore  README.md  REPLAY_SERVICE_RUNTIME_PLAN.md  RS_GUI_ARCHITECTURE.md  RS_GUI_IMPLEMENTATION_PLAN.md  RS_GUI_REVIEW_2026-06-23.md  RS_GUI_TKINTER_MIGRATION_PLAN.md  RS_GUI_WIREFRAME_PLAN.md  TROUBLESHOOTING.md  preflight.py  requirements.txt  rs_gui_app.py  run_gui.sh  run_rs_gui.sh  setup.sh
services/rs_gui_v1/: CONNEXT_MONITOR_REVIEW_FINDINGS.md  GUI_ARCHITECTURE.md  MONITORING_TYPE_ISSUE.md  README.md  REVIEW_FINDINGS.md  REVIEW_FIXES_APPLIED.md  recording_service_control.py  recording_service_environment.py  recording_service_monitor.py  setup.sh
services/rs_gui_v2/: .gitignore  DEARPYGUI_APP_ARCHITECTURE.md  DEARPYGUI_IMPLEMENTATION_PLAN.md  DEARPYGUI_WIREFRAME_PLAN.md  README.md  REPLAY_SERVICE_RUNTIME_PLAN.md  RS_GUI_V2_ARCHITECTURE.md  RS_GUI_V2_IMPLEMENTATION_PLAN.md  RS_GUI_V2_WIREFRAME_PLAN.md  TROUBLESHOOTING.md  preflight.py  requirements.txt  rs_gui_v2_app.py  run_gui.sh  setup.sh
services/test/: README.md  run_all_tests.py  test_e2e_services.py
system_templates/: README.md
tools/: README.md  install.sh  optimize_socket_buffers.sh  requirements.txt  rtispy.py  run_rtispy.sh
tools/rti_spy/: README.md  install.sh  requirements.txt  rtispy.py  run_rtispy.sh
tools/rti_view/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  requirements.txt  run_rti_view.sh
(+312 files in other folders)
